styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply font-sans bg-light-100 text-gray-900 dark:bg-dark-100 dark:text-gray-200;
}

html,
body {
  padding: 0;
  margin: 0;
  line-height: 1.6;
  font-size: 18px;
}

body,
h1,
h2,
h3,
h4,
p {
  transition: color 250ms ease-in 0s, background-color 350ms ease-in 0s,
    border-color 360ms ease-in 0.1s, font-weight 250ms ease-in;
}

* {
  box-sizing: border-box;
}

a,
.prose a {
  @apply text-blue-600 dark:text-blue-500;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.content-wrapper {
  margin: 80px auto;
  @apply px-16;
  width: 100%;
  max-width: 1100px;
}

main {
  width: 100%;
  position: relative;
}
@media (max-width: 563px) {
  .content-wrapper {
    @apply px-4;
  }
}

button:focus {
  outline: none;
}

button:focus-visible {
  outline: 5px auto -webkit-focus-ring-color;
}

header {
  transition: border 0.5s ease-in;

  a {
    transition: color 0.5s ease-in;
  }
}

h1 {
  font-size: 2.4em;
  font-weight: 200;
  margin-top: 0;
  @apply mb-4;
  line-height: 1.3;
  scroll-margin-top: 0.5em;
}

h2 {
  font-size: 1.6em;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 1em;
  line-height: 1.3;
  scroll-margin-top: 0.5em;
}

h3 {
  font-size: 1.1em;
  font-weight: 400;
  margin-bottom: 0.6em;
  line-height: 1.6;
  scroll-margin-top: 0.5em;
}

h4 {
  @apply text-gray-500 dark:text-gray-400 tracking-widest;
  font-size: 0.8em;
  font-weight: 500;
  text-transform: uppercase;
  margin-bottom: 0.6em;
  line-height: 1.6;
  scroll-margin-top: 0.5em;
}

.spacer {
  margin-right: 8px;
}

p {
  @apply text-gray-700 dark:text-gray-300;
  margin-bottom: 2em;
}

code {
  @apply bg-gray-200 dark:bg-gray-800 dark:text-white;
  border-radius: 3px;
  font-family: courier, monospace;
  padding: 0 3px;
  font-weight: 500 !important;
}

dd {
  @apply mb-10;
}

.post-preview {
  @apply hover:no-underline;
}

.post-preview {
  .description {
    @apply text-gray-500 dark:text-gray-400 mb-3;
  }
}

.post-preview h2 {
  @apply text-lg text-gray-900 dark:text-gray-100 font-normal mb-0;
  display: flex;
  align-items: center;
}

.post-preview:hover h2 {
  @apply text-blue-600 dark:text-blue-500;
}

.post-preview:hover h2:after {
  opacity: 1;
}

.post-preview h2:after {
  content: '→';
  @apply ml-2 text-sm;
  opacity: 0;
  transition: opacity 0.15s ease-in;
}

.notes {
  @apply text-gray-500 dark:text-gray-400 text-sm;
}

.featured-post .post {
  @apply bg-white rounded-tl-xl rounded-br-xl dark:bg-gray-800 hover:shadow-lg;
  transition: box-shadow 0.2s ease-in;

  .post-preview {
    @apply p-6;
  }
}

.disabled,
.disabled:hover {
  opacity: 0.5;
  cursor: not-allowed;
}

.layout {
  grid-template-columns: 1fr auto;
  @apply lg:grid-cols-none;
}

.dark .banner g g path {
  transition: stroke 0.2s ease-in-out;
  stroke: #374151;
}

.dark .banner g g {
  filter: invert(75%);
}

.icon-link {
  position: relative;
}

h2:hover .icon-link:before,
h3:hover .icon-link:before {
  content: '#';
  @apply text-gray-400 dark:text-gray-600 sm:hidden;
  margin-left: -30px;
  padding-right: 16px;
  position: absolute;
  opacity: 0.5;
  transition: opacity 0.1s ease-in;
}

h2 .icon-link:hover:before,
h3 .icon-link:hover:before {
  opacity: 1;
}

.theme-enter {
  opacity: 0;
}

.theme-enter.theme-enter-active {
  opacity: 1;
  transition: opacity 300ms ease-in;
}

.theme-leave {
  opacity: 1;
}

.theme-leave.theme-leave-active {
  opacity: 0;
  transition: opacity 300ms ease-in;
}

figure img {
  @apply mb-0 !important;
}

.article-wrapper {
  max-width: 650px;
}

.toc {
  position: absolute;
  height: 100%;
  right: 0;
  width: 200px;
  top: 0;
  transition: opacity 0.2s ease-in-out;
}

.prose .toc ol {
  position: sticky;
  top: 60px;
  margin-top: 0;

  > li {
    padding-left: 0;
    line-height: 1.4;
    margin-bottom: 0.75rem;
  }
}

.prose .toc ol > li:before {
  content: none;
}

.prose .toc a {
  @apply font-normal text-gray-500 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-300;
  text-decoration: none;
  font-size: 14px;
  display: block;
}

.visually-hidden {
  opacity: 0;
  height: 0;
  width: 0;
  overflow: hidden;
  clip: rect(0 0 0 0);

  a:before {
    content: none;
  }
}

@media screen and (max-width: 1060px) {
  .toc {
    opacity: 0;
    width: 0;
    height: 0;
    overflow: hidden;
  }

  article.prose {
    overflow: hidden;
    max-width: none;
  }

  .article-wrapper {
    max-width: none;
  }
}

.active {
  @apply bg-gray-200 dark:bg-gray-800;
}

